@@ -19,40 +19,39 @@ import com.gongjakso.server.domain.post.repository.StackNameRepository;
 import com.gongjakso.server.global.exception.ApplicationException;
 import com.gongjakso.server.global.exception.ErrorCode;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-import static com.gongjakso.server.domain.post.enumerate.PostStatus.EXTENSION;
-import static com.gongjakso.server.domain.post.enumerate.PostStatus.RECRUITING;
+import static com.gongjakso.server.domain.post.enumerate.PostStatus.*;
 import static com.gongjakso.server.global.exception.ErrorCode.INVALID_VALUE_EXCEPTION;
 
 
 @Service
-@Transactional
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ApplyService {
+
     private final ApplyRepository applyRepository;
     private final PostRepository postRepository;
     private final CategoryRepository categoryRepository;
     private final StackNameRepository stackNameRepository;
     private final ApplyStackRepository applyStackRepository;
+//    private final EmailClient emailClient;
 
-    public void save(Member member, Long post_id, ApplyReq req) {
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
+    @Transactional
+    public void save(Member member, Long postId, ApplyReq req) {
+        // Validation
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
         //Check reapply
-        if (applyRepository.existsApplyByMemberAndPost(member, post)) {
+        if (applyRepository.existsApplyByMemberAndPostAndIsCanceledIsFalse(member, post)) {
             throw new ApplicationException(ErrorCode.ALREADY_APPLY_EXCEPTION);
         }
         //Check Post Date
@@ -60,11 +59,9 @@ public class ApplyService {
             throw new ApplicationException(ErrorCode.NOT_APPLY_EXCEPTION);
         }
 
-
         Apply apply = req.toEntity(member, post);
         applyRepository.save(apply);
         if(post.isPostType()){
-            System.out.println("project");
             for(String stackNameType : req.stack()){
                 //StackNameType인지 판단
                 if (!StackNameType.isValid(stackNameType)){
@@ -77,13 +74,9 @@ public class ApplyService {
         }
     }
 
-    public ApplyRes findApply(Member member,Long post_id) {
+    public ApplyRes findApply(Member member,Long postId) {
         //Get Post
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if (post == null) {
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
-        //Check leader
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
         if (!Objects.equals(post.getMember().getMemberId(), member.getMemberId())) {
             throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
         }
@@ -95,11 +88,8 @@ public class ApplyService {
         return ApplyRes.of(post, current_person, categoryList);
     }
 
-    public CategoryRes findPostCategory(Long post_id) {
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
+    public CategoryRes findPostCategory(Long postId) {
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
 
         //Change List Type
         List<String> categoryList = changeCategoryType(post);
@@ -114,12 +104,9 @@ public class ApplyService {
 
     }
 
-    public ApplicationRes findApplication(Member member, Long apply_id, Long post_id) {
+    public ApplicationRes findApplication(Member member, Long apply_id, Long postId) {
         Apply apply = applyRepository.findById(apply_id).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_APPLY_EXCEPTION));
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
 
         //Check leader
         if (!Objects.equals(post.getMember().getMemberId(), member.getMemberId())) {
@@ -142,11 +129,10 @@ public class ApplyService {
             stackNameList= null;
         }
 
-        return ApplicationRes.of(apply, categoryList, stackNameList,applyStackList);
-
-
+        return ApplicationRes.of(apply, categoryList, stackNameList, applyStackList);
     }
 
+    @Transactional
     public List<String> changeCategoryType(Post post){
         List<Category> categoryList = categoryRepository.findCategoryByPost(post);
         if (categoryList == null) {
@@ -161,6 +147,7 @@ public class ApplyService {
         return stringTypelist;
     }
 
+    @Transactional
     public List<String> changeStackNameType(Post post){
         List<StackName> stackNameList = stackNameRepository.findStackNameByPost(post);
         List<String> stringTypelist = new ArrayList<>();
@@ -171,17 +158,13 @@ public class ApplyService {
         return stringTypelist;
     }
 
-    public ApplyPageRes applyListPage(Member member,long post_id, int page, int size) {
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
-        //Check leader
-        if (!Objects.equals(post.getMember().getMemberId(), member.getMemberId())) {
+    public ApplyPageRes applyListPage(Member member, long postId, int page, int size) {
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
+        if(!post.getMember().getMemberId().equals(member.getMemberId())) {
             throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
         }
 
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
         Page<Apply> applyPage = applyRepository.findAllByPost(post, pageable);
         List<ApplyList> applyLists = applyPage.getContent().stream()
                 .map(apply -> ApplyList.of(apply, decisionState(apply)))
@@ -193,16 +176,15 @@ public class ApplyService {
         return ApplyPageRes.of(applyLists, pageNo, size, totalPages, last);
     }
 
-    public ParticipationPageRes myParticipationPostListPage(int page, int size) {
-        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
-        Page<Apply> participationPage = applyRepository.findApplyByApplyType(ApplyType.PASS, pageable);
-        List<ParticipationList> participationLists = participationPage.getContent().stream()
-                .map(apply -> ParticipationList.of(apply.getPost(), CategoryType.valueOf(apply.getRecruit_part())))
+    public ParticipationPageRes myParticipationPostListPage(Member member, Pageable page) {
+        Pageable pageable = PageRequest.of(page.getPageNumber(), page.getPageSize(), Sort.by("createdAt").descending());
+        System.out.println(pageable.getOffset());
+        List<PostStatus> postStatusList = Arrays.asList(ACTIVE, COMPLETE);
+        Page<Post> postPage = postRepository.findPostsByMemberIdAndPostStatusInOrderByCreatedAtDesc(member.getMemberId(), postStatusList, pageable);
+        List<ParticipationList> participationLists = postPage.getContent().stream()
+                .map(ParticipationList::of)
                 .collect(Collectors.toList());
-        int pageNo = participationPage.getNumber();
-        int totalPages = participationPage.getTotalPages();
-        boolean last = participationPage.isLast();
-        return ParticipationPageRes.of(participationLists, pageNo, size, totalPages, last);
+        return ParticipationPageRes.of(participationLists, postPage.getNumber(), postPage.getSize(), postPage.getTotalPages(), postPage.isLast());
     }
 
     private String decisionState(Apply apply) {
@@ -216,6 +198,7 @@ public class ApplyService {
         return "미열람";
     }
 
+    @Transactional
     public void updateState(Member member,Long apply_id, ApplyType applyType) {
         Apply apply = applyRepository.findById(apply_id).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_APPLY_EXCEPTION));
         //Check ApplyType
@@ -231,7 +214,7 @@ public class ApplyService {
                 throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
             }
             Category category = categoryRepository.findCategoryByPostAndCategoryType(post, CategoryType.valueOf(apply.getRecruit_part()));
-            if (category.getSize() - 1 <= 0) {
+            if (category.getSize() <= 0) {
                 throw new ApplicationException(ErrorCode.OVER_APPLY_EXCEPTION);
             } else {
                 category.setSize(category.getSize() - 1);
@@ -239,11 +222,9 @@ public class ApplyService {
         }
     }
 
-    public void updatePostState(Member member,Long post_id, PostStatus postStatus) {
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
+    @Transactional
+    public void updatePostState(Member member,Long postId, PostStatus postStatus) {
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
         //Check leader
         if (!Objects.equals(post.getMember().getMemberId(), member.getMemberId())) {
             throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
@@ -256,12 +237,9 @@ public class ApplyService {
         post.setStatus(postStatus);
     }
 
-    public void updatePostPeriod(Member member,Long post_id, PeriodReq req) {
-        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(post_id);
-        if(post==null){
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }
-        //Check leader
+    @Transactional
+    public void updatePostPeriod(Member member,Long postId, PeriodReq req) {
+        Post post = postRepository.findWithStackNameAndCategoryUsingFetchJoinByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
         if (!Objects.equals(post.getMember().getMemberId(), member.getMemberId())) {
             throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
         }
@@ -270,21 +248,17 @@ public class ApplyService {
             throw new ApplicationException(ErrorCode.NOT_RECRUITING_EXCEPION);
         }
         post.setStatus(EXTENSION);
-        post.setFinishDate(req.finishDate());
+        post.setFinishDate(req.finishDate().atStartOfDay());
     }
 
 
-    public List<MyPageRes> getMyApplyList(Member member) {
+    public Page<MyPageRes> getMyApplyList(Member member, Pageable pageable) {
         // Validation
 
         // Business Logic
-        List<Apply> applyList = applyRepository.findAllByMemberAndDeletedAtIsNull(member);
-
-
-        // Response
-        return applyList.stream()
-                .filter(apply -> apply.getPost().getStatus() == PostStatus.RECRUITING ||
-                        apply.getPost().getStatus() == PostStatus.EXTENSION)
+        List<PostStatus> postStatusList = Arrays.asList(RECRUITING, EXTENSION, CANCEL, CLOSE);
+        Page<Apply> applyPage = applyRepository.findAllByMemberAndPostStatusInAndDeletedAtIsNullAndIsCanceledFalseOrderByCreatedAtDesc(member, postStatusList,  pageable);
+        List<MyPageRes> applyList = applyPage.stream()
                 .map(apply -> {
                     Post post = apply.getPost();
                     List<String> categoryList = post.getCategories().stream()
@@ -293,36 +267,53 @@ public class ApplyService {
 
                     return MyPageRes.of(post, apply, categoryList);
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        // Response
+        return new PageImpl<>(applyList, pageable, applyPage.getTotalElements());
     }
 
     public ApplicationRes getMyApplication(Member member, Long postId){
-        Post post = postRepository.findByPostId(postId);
-        if (post == null) {
-            throw new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION);
-        }else{
-            Apply apply = applyRepository.findApplyByMemberAndPost(member, post);
-            if(apply == null){
-                throw new ApplicationException(ErrorCode.NOT_FOUND_APPLY_EXCEPTION);
-            }else {
-                //Change List Type
-                List<String> categoryList = changeCategoryType(post);
-                List<String> stackNameList;
-                List<String> applyStackList = null;
-                if(post.isPostType()){
-                    stackNameList = changeStackNameType(post);
-                    System.out.println("change stack name");
-                    List<ApplyStack> applyStacks = applyStackRepository.findAllByApply(apply);
-                    applyStackList = new ArrayList<>();
-                    for(ApplyStack applyStack : applyStacks){
-                        applyStackList.add(applyStack.getStackName().getStackNameType());
-                    }
-                }else {
-                    stackNameList= null;
-                }
+        Post post = postRepository.findByPostId(postId).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
 
-                return ApplicationRes.of(apply, categoryList, stackNameList,applyStackList);
+        Apply apply = applyRepository.findApplyByMemberAndPostAndDeletedAtIsNullAndIsCanceledFalse(member, post).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_APPLY_EXCEPTION));
+
+        // Change List Type
+        List<String> categoryList = changeCategoryType(post);
+        List<String> stackNameList;
+        List<String> applyStackList = null;
+        if(post.isPostType()){
+            stackNameList = changeStackNameType(post);
+            List<ApplyStack> applyStacks = applyStackRepository.findAllByApply(apply);
+            applyStackList = new ArrayList<>();
+            for(ApplyStack applyStack : applyStacks){
+                applyStackList.add(applyStack.getStackName().getStackNameType());
             }
+        }else {
+            stackNameList= null;
         }
+
+        return ApplicationRes.of(apply, categoryList, stackNameList, applyStackList);
+    }
+
+    @Transactional
+    public PatchApplyRes cancelApply(Member member, Long applyId) {
+        // Validation: 논리적 삭제 데이터이거나 신청자 본인이 아닌 경우에 대한 유효성 검증 + 공고의 모집 기한 확인
+        Apply apply = applyRepository.findApplyByApplyIdAndDeletedAtIsNullAndIsCanceledFalse(applyId).orElseThrow(() -> new ApplicationException(ErrorCode.ALREADY_DELETE_EXCEPTION));
+        if (!apply.getMember().getMemberId().equals(member.getMemberId())) {
+            throw new ApplicationException(ErrorCode.UNAUTHORIZED_EXCEPTION);
+        }
+        Post post = postRepository.findByPostIdAndDeletedAtIsNull(apply.getPost().getPostId()).orElseThrow(() -> new ApplicationException(ErrorCode.NOT_FOUND_POST_EXCEPTION));
+        if(post.getFinishDate().isBefore(LocalDateTime.now())) {
+            throw new ApplicationException(ErrorCode.ALREADY_FINISH_EXCEPTION);
+        }
+        // Business Logic: isCanceled 칼럼을 TRUE로 변경하고, 공고 게시자에세 이메일을 전송한다.
+        apply.updateIsCanceled(Boolean.TRUE);
+        Apply saveApply = applyRepository.save(apply);
+        // TODO: 이메일 발송 로직을 실시간성이 아닌 일괄배치 또는 비동기로 변환 필요 (성능 문제)
+        // emailClient.sendOneEmail(post.getMember().getEmail());
+
+        // Response
+        return PatchApplyRes.of(saveApply, member);
     }
 }
